# test_task_effective_mobile

./: .env  docker-compose.yml  pyproject.toml
src/: alembic.ini  app.py
src/data/: config.py  create_user_form.py
src/database/: core.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2690bde5ca0d_.py  5b76564ce288_.py
src/database/models/: __init__.py  user.py
src/database/repositories/: __init__.py  base_repository.py  user_repository.py
src/handlers/user/: auth.py
src/services/: __init__.py  unit_of_work.py  user.py
src/utils/: depends.py
